# crm-gbyv-backend

./: docker-compose.yml  manage.py  pyproject.toml
authUser/: api.py  models.py  schemas.py
authUser/migrations/: 0001_initial.py  0002_alter_user_password.py  0002_alter_user_table_alter_useradmin_table_and_more.py
authUser/service/: auth.py  security.py
crm/: asgi.py  settings.py  urls.py
crmCore/: settings.py  urls.py  wsgi.py
utils/: create_response.py
vscode/: settings.json
